# earthkit-meteo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/: ci-hpc-config.yml  ci-hpc-gpu-config.yml
.github/workflows/: ci.yml  legacy-ci.yml  nightly-hpc-gpu.yml
docs/: api.rst  conf.py  development.rst  examples.rst  index.rst  install.rst  references.rst  requirements.txt  skip_api_rules.py
docs/_static/: custom.css
docs/api/: index.rst
docs/examples/: excess_heat_factor.ipynb  hybrid_levels.ipynb  index.rst  interpolate_hybrid_to_hl.ipynb  interpolate_hybrid_to_pl.ipynb  interpolate_pl_to_hl.ipynb  interpolate_pl_to_pl.ipynb  return_period.ipynb  seven_weather_regimes.ipynb
docs/experimental/: compute_object.ipynb
docs/release_notes/: deprecation.rst  index.rst  version_0.1_updates.rst  version_0.2_updates.rst  version_0.3_updates.rst  version_0.4_updates.rst  version_0.5_updates.rst  version_0.6_updates.rst  version_0.7_updates.rst
docs/release_notes/include/: deprec_hybrid_geopotential_thickness.py  deprec_hybrid_pressure.py  deprec_hybrid_pressure_at_height_levels.py  migrated_hybrid_geopotential_thickness.py  migrated_hybrid_pressure.py  migrated_hybrid_pressure_at_height_levels.py
earthkit/meteo/: __init__.py
earthkit/meteo/constants/: __init__.py  constants.py
earthkit/meteo/extreme/: __init__.py  cpf.py  efi.py  sot.py
earthkit/meteo/geo/: geo.py
earthkit/meteo/score/: __init__.py  crps.py  events.py
earthkit/meteo/solar/: __init__.py  solar.py
earthkit/meteo/stats/: __init__.py  numpy_extended.py  quantiles.py
earthkit/meteo/thermo/: __init__.py  thermo.py
earthkit/meteo/utils/: array.py
earthkit/meteo/wind/: __init__.py  wind.py
tests/: downstream-ci-requirements.txt  environment-unit-tests.yml  test_extreme.py  test_geo.py  test_score.py  test_solar.py  test_thermo.py  test_version.py  test_wind.py
tests/data/: eqpt.csv  sat_mr.csv  sat_mr_slope.csv  sat_q.csv  sat_q_slope.csv  sat_vp.csv  sat_vp_slope.csv  seqpt.csv  t_hum_p_data.csv  t_on_most_adiabat.csv  t_wet.csv  t_wetpt.csv
tests/documentation/: test_examples.py
tests/extreme/: _cpf.py  _data.py  test_excess_heat.py  test_excess_heat_xarray.py  test_extreme.py  test_extreme_array.py  test_extreme_xarray.py
tests/extreme/array/: test_extreme.py
tests/extreme/xarray/: test_extreme.py
tests/geo/: test_score.py
tests/regimes/: test_index.py  test_index_array.py  test_index_xarray.py  test_patterns.py
tests/regimes/array/: test_index.py
tests/regimes/xarray/: test_index.py
tests/score/: _crps.py  _kge.py  test_deterministic.py  test_ensemble.py  test_score.py
tests/score/array/: _pearson.py  test_score.py
tests/score/xarray/: test_deterministic.py  test_ensemble.py
tests/solar/: test_solar.py  test_solar_array.py
tests/solar/array/: test_solar.py
tests/solar/xarray/: test_solar.py
tests/stats/: _quantile.py  test_extreme_values.py  test_extreme_values_array.py  test_extreme_values_xarray.py  test_stats.py  test_stats_extreme_values_array.py  test_stats_extreme_values_xarray.py
tests/stats/array/: _quantile.py  test_extreme_values.py  test_numpy_extended.py  test_quantiles.py
tests/stats/xarray/: test_extreme_values.py
tests/thermo/: test_excess_heat.py  test_thermo.py  test_thermo_array.py  test_thermo_fieldlist.py  test_thermo_xarray.py
tests/vertical/: _hybrid_core_data.py  _hybrid_height_data.py  _monotonic_cases.py  _pl_data.py  _vertical_data.py  test_array_interpolate.py  test_array_monotonic.py  test_array_vertical.py  test_cape_cin.py  test_interpolate.py  test_vertical.py  test_vertical_deprec.py  test_xr_monotonic.py  test_xr_theta.py
tests/wind/: test_wind.py  test_wind_array.py  test_wind_fieldlist.py  test_wind_xarray.py
(+123 files in other folders)
