[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "setuptools-scm>=8", "wheel" ]

[project]
name = "earthkit-meteo"
description = "Meteorological computations"
readme = "README.md"
license = { text = "Apache License Version 2.0" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]
dependencies = [
  "deprecation",
  "earthkit-utils>=0.0.1",
  "numpy",
]
optional-dependencies.all = [
  "earthkit-meteo[samples]",
]
optional-dependencies.dev = [
  "earthkit-meteo[all,docs,test]",
]
optional-dependencies.docs = [
  "nbsphinx",
  "requests",
  "sphinx>=7.3.7",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "sphinx-issues",
  "sphinx-rtd-theme",
  "sphinx-tabs",
]
optional-dependencies.gpu = [
  "cupy",
  "torch",
]
optional-dependencies.samples = [
  "requests",
]
optional-dependencies.test = [
  "earthkit-data",
  "pytest",
  "pytest-cov",
  "requests",
  "xarray",
]
urls.Documentation = "https://earthkit-meteo.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit-meteo/"
urls.Issues = "https://github.com/ecmwf/earthkit-meteo.issues"
urls.Repository = "https://github.com/ecmwf/earthkit-meteo/"

[tool.setuptools.packages.find]
include = [ "earthkit.meteo" ]
where = [ "src/" ]

[tool.setuptools_scm]
version_file = "src/earthkit/meteo/_version.py"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = "true"

[tool.pydocstyle]
add_ignore = [ "D1", "D200", "D205", "D400", "D401" ]
convention = "numpy"
